<resources>
    <string name="app_name">木兰农场</string>
    <string name="gymlnc">关于木兰农场</string>
    <string name="nongchang">农场</string>
    <string name="dangan">档案</string>
    <string name="zhinan">指南</string>
    <string name="wode">我的</string>
    <string name="lijitiyan">立即体验</string>
    <string name="yonghuming">用户名</string>
    <string name="mima">密码</string>
    <string name="zhuce">注册</string>
    <string name="wangjimim">忘记密码</string>
    <string name="denglu">登录</string>
    <string name="dljdbnty">登录即代表你同意</string>
    <string name="mlncxy">木兰农场用户协议</string>
    <string name="qsrndyx">请输入您的邮箱</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="qsrmm">请输入密码</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="hqyzm">获取验证码</string>
    <string name="wangluoyichang">网络异常</string>
    <string name="qhqyzm">请获取验证码</string>
    <string name="yzmyw">验证码有误</string>
    <string name="qsryhm">请输入用户名</string>
    <string name="qtyyhxy">请同意用户协议</string>
    <string name="xiaoxi">消息</string>
    <string name="xiaoxihezi">消息盒子</string>
    <string name="qiandao">签到</string>
    <string name="xianggu">香菇</string>
    <string name="chakandangan">查看档案</string>
    <string name="djtjsxt">切换/添加摄像头</string>
    <string name="shurubiaoti">输入标题</string>
    <string name="qingkong">清空</string>
    <string name="qsrlr">请输入内容</string>
    <string name="baocun">保存</string>
    <string name="zhucechenggong">注册成功</string>
    <string name="zhuceshibai">注册失败</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="hqyzmcg">获取验证码成功</string>
    <string name="qsrxmm">请输入新密码</string>
    <string name="mmxgcg">密码修改成功</string>
    <string name="zayctc">再按一次退出</string>
    <string name="gerenzhuye">个人主页</string>
    <string name="bianjiziliao">编辑资料</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="shezhi">设置</string>
    <string name="bijizhongxin">笔记中心</string>
    <string name="qdcgjxjyb">签到成功!继续加油吧!</string>
    <string name="mrqdlxd">每日签到，连续第</string>
    <string name="tian">天</string>
    <string name="wozhidaola">我知道啦！</string>
    <string name="xiugaimima">修改密码</string>
    <string name="qsrjmm">请输入旧密码</string>
    <string name="qzcsrxmm">请再次输入新密码</string>
    <string name="wancheng">完成</string>
    <string name="lcsrdmmbt">两次输入的密码不同</string>
    <string name="qingchuhuancun">清除缓存</string>
    <string name="jianchagengxin">检查更新</string>
    <string name="chengxuxinxi">程序信息</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="mimagenggaichenggong">密码更改成功</string>
    <string name="qingchuhuancun_">清楚缓存?</string>
    <string name="tishi">提示</string>
    <string name="queding">确定</string>
    <string name="pinzhong_">品种：</string>
    <string name="sui">岁</string>
    <string name="chuangjianshijian_">创建时间：</string>
    <string name="pinzhong">品种</string>
    <string name="lingyangshijian">领养时间</string>
    <string name="nianling">年龄</string>
    <string name="tizhong_kg">体重(kg)</string>
    <string name="shengaocm">身高(cm)</string>
    <string name="aihao">爱好</string>
    <string name="taoyan">讨厌</string>
    <string name="yiqiandao_tian">[已签到%s天]</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="xingbie">性别</string>
    <string name="qingxuanze">请选择</string>
    <string name="diqu">地区</string>
    <string name="gexingqianming">个性签名</string>
    <string name="quxiao">取消</string>
    <string name="shangchuanchenggong">上传成功</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="xiangxidizhi">详细地址</string>
    <string name="xiugaichenggong">修改成功</string>
    <string name="zongzichan_">总资产：￥</string>
    <string name="chongzhi">充值</string>
    <string name="fukuan">付款</string>
    <string name="baocunchenggong">保存成功</string>
    <string name="wodebiji">我的笔记</string>
    <string name="qsrsz">请输入数字</string>
    <string name="tjsxt">添加摄像头</string>
    <string name="shexiangtou">摄像头</string>
    <string name="tupian">图片</string>
    <string name="bianhao">编号</string>
    <string name="qsrsxtbh">请输入摄像头编号</string>
    <string name="mingcheng">名称</string>
    <string name="qsrsxtmc">请输入摄像头名称</string>
    <string name="bangding">绑定</string>
    <string name="querenshanchu">确认删除</string>
    <string name="qxztp">请选择图片</string>
    <string name="sxtdlcg">摄像头登录成功</string>
    <string name="whdsxtxx">未获得摄像头信息</string>
    <string name="nwqczgsxt">您无权操作该摄像头</string>
    <string name="zhinanxiangqin">指南详情</string>
    <string name="xy_cnbf">需要wifi才能播放</string>
    <string name="f_jzgk">非wifi禁止观看</string>
    <string name="jz_jzgk">仅在wifi禁止观看</string>
    <string name="qsrsxtmm">请输入摄像头密码</string>
    <string name="sxtdlsb">摄像头登录失败</string>
    <string name="dituxiangqin">地图详情</string>
    <string name="zhanghuyichang">账户异常</string>
    <string name="yuebuzu">余额不足</string>
    <item name="adapter_item_tag_key" type="id" />
</resources>
