<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_h"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x50"
            android:src="@mipmap/arrow_left" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/zhaohuimima"
            android:textColor="@color/textColorWhile"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:layout_marginTop="@dimen/y20"
        android:background="@color/activityStageBg"
        android:hint="@string/qsrndyx"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:paddingLeft="@dimen/x30"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:background="@color/activityStageBg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editCode"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/qsryzm"
            android:maxLength="30"
            android:paddingLeft="@dimen/x30"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColorHint" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/x15"
            android:paddingRight="@dimen/x30"
            android:text="@string/hqyzm"
            android:textColor="@color/textColor" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line" />

    <EditText
        android:id="@+id/editPwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:background="@color/activityStageBg"
        android:hint="@string/qsrxmm"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="@dimen/x30"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/x600"
        android:layout_height="@dimen/y90"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y40"
        android:background="@drawable/select_10green_btn"
        android:text="@string/zhuce"
        android:textColor="@color/activityStageBg"
        android:textSize="@dimen/textSize2" />
</LinearLayout>