<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.xcc.mylibrary.widget.photoView.RoundedImageView
        android:layout_width="@dimen/y157"
        android:layout_height="@dimen/y157"
        android:layout_marginTop="@dimen/y270"
        android:src="@mipmap/logo"
        app:corner_radius="@dimen/y20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/app_name"
        android:textColor="@color/textColorWhile"
        android:textSize="@dimen/y48" />

    <LinearLayout
        android:layout_width="@dimen/x540"
        android:layout_height="@dimen/y162"
        android:layout_marginTop="@dimen/y210"
        android:background="@drawable/shape_10black66"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/admin"
            android:drawablePadding="@dimen/x10"
            android:gravity="center_vertical"
            android:hint="@string/yonghuming"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:paddingLeft="@dimen/y20"
            android:text="1655661337@qq.com"
            android:textColor="@color/textColorWhile"
            android:textColorHint="@color/textColorWhile"
            android:textSize="@dimen/y34" />
        <!--android:text="768422128@qq.com"-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#fff" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="@dimen/x10"
            android:gravity="center_vertical"
            android:hint="@string/mima"
            android:inputType="textPassword"
            android:maxLength="30"
            android:paddingLeft="@dimen/y20"
            android:text="hzbzyl1314"
            android:textColor="@color/textColorWhile"
            android:textColorHint="@color/textColorWhile"
            android:textSize="@dimen/y34" />
        <!--android:text="zln113"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/x540"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textReg"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zhuce"
            android:textColor="@color/textColorWhile"
            android:textSize="@dimen/y28" />

        <View
            android:layout_width="0px"
            android:layout_height="1px"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textForget"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/wangjimim"
            android:textColor="@color/textColorWhile"
            android:textSize="@dimen/y28" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/x238"
        android:layout_height="@dimen/y72"
        android:layout_marginTop="@dimen/y90"
        android:background="@drawable/select_btn_black66to33"
        android:text="@string/denglu"
        android:textColor="@color/textColorWhile"
        android:textSize="@dimen/y34"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/wxLogin"
            android:layout_width="@dimen/y120"
            android:layout_height="@dimen/y120"
            android:layout_centerInParent="true"
            android:src="@drawable/wechat" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wxLogin"
            android:layout_centerHorizontal="false"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="微信登录"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/y70"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="@dimen/y30"
            android:layout_height="@dimen/y30"
            android:background="@drawable/select_chack_btn"
            android:button="@null" />

        <TextView
            android:id="@+id/textCheck"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x10"
            android:layout_weight="1"
            android:text="@string/dljdbnty"
            android:textColor="@color/textColorWhile"
            android:textSize="@dimen/y26" />

        <TextView
            android:id="@+id/textTreaty"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x10"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/mlncxy"
            android:textColor="@color/textColorWhile"
            android:textSize="@dimen/y26" />
    </LinearLayout>
</LinearLayout>